--- a/components/App/styles.scss
+++ b/components/App/styles.scss
@@ -1,5 +1,3 @@
-@import "../../constants.scss";
-
 body {
   margin: 0;
   padding: 0;
@@ -7,8 +5,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 .root {
-  margin: 0;
+  margin: 0 20px 20px;
   padding: 0;
-  display: grid;
-  grid-template-columns: auto 1fr;
+  display: flex;
+  justify-content: center;
 }
