--- a/components/BoxView/styles.scss
+++ b/components/BoxView/styles.scss
@@ -1,12 +1,8 @@
-@import "../../constants.scss";
-
 .preview {
-  margin: 0;
-  position: relative;
+  margin: 0 20px;
   text-align: center;
   box-sizing: border-box;
 
-  @media only screen and (max-width: 610px) {
-    //padding: $previewPaddingMin $previewPaddingMin 70px $previewPaddingMin;
+  @media only screen and (max-width: 580px) {
   }
 }
