--- a/components/Fields/styles.scss
+++ b/components/Fields/styles.scss
@@ -1,23 +1,21 @@
-@import "../../constants.scss";
-
 $inputHeight: 38px;
 $inputBorderColor: #d3d8de;
 
 .root {
   margin: 0;
   padding: 0;
-  width: 350px;
+  width: 100px;
   position: relative;
-  align-self: start;
+  align-self: center;
 }
 .input {
-  margin: 0;
+  margin: 2px 0 0 0;
   padding: 0 11px;
   width: 100%;
   font-size: 16px;
   line-height: 16px;
   color: #7c858d;
-  height: 100%;
+  height: 25px;
   border: none;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
@@ -30,4 +28,13 @@ $inputBorderColor: #d3d8de;
   outline: none;
 }
 .input:hover {
+}
+.label {
+  display: block;
+  margin: 0 0 10px 0;
+  font-size: 16px;
+}
+.text {
+  color: #666;
+  font-size: 12px;
 }
