--- a/components/App/styles.scss
+++ b/components/App/styles.scss
@@ -9,4 +9,9 @@ body {
   padding: 0;
   display: flex;
   justify-content: center;
+  min-width: 600px;
+
+  @media only screen and (max-width: 600px) {
+    flex-direction: column;
+  }
 }
