--- a/components/Fields/styles.scss
+++ b/components/Fields/styles.scss
@@ -1,5 +1,6 @@
 $inputHeight: 38px;
 $inputBorderColor: #d3d8de;
+$buttonHeight: 25px;
 
 .root {
   margin: 0;
@@ -7,15 +8,21 @@ $inputBorderColor: #d3d8de;
   width: 100px;
   position: relative;
   align-self: center;
+
+  @media only screen and (max-width: 600px) {
+    display: flex;
+    width: calc(100vw - 2 * 20px);
+    align-self: flex-start;
+  }
 }
 .input {
   margin: 2px 0 0 0;
-  padding: 0 11px;
+  padding: 0 0 0 11px;
   width: 100%;
   font-size: 16px;
   line-height: 16px;
   color: #7c858d;
-  height: 25px;
+  height: $buttonHeight;
   border: none;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
@@ -33,8 +40,26 @@ $inputBorderColor: #d3d8de;
   display: block;
   margin: 0 0 10px 0;
   font-size: 16px;
+
+  @media only screen and (max-width: 600px) {
+    width: 70px;
+  }
 }
 .text {
   color: #666;
   font-size: 12px;
+}
+.valid {
+  padding: 50px 0 0 0;
+  position: relative;
+
+  @media only screen and (max-width: 600px) {
+    flex-grow: 1;
+    padding-top: 20px;
+    text-align: right;
+  }
+}
+
+.button {
+  height: $buttonHeight;
 }
